--- a/omnetpp.ini
+++ b/omnetpp.ini
@@ -1,6 +1,8 @@
 [General]
 network = UPBSSN
 
+#sim-time-limit = 5s
+
 *.pad[0].destinationfreqs = " 0	30	40	15	12 "
 *.pad[1].destinationfreqs = " 76	0	7	21	23 "
 *.pad[2].destinationfreqs = " 99	14	0	28	31 "
